samples/_failures_safe/1761268641_55df5a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5789795c.c: In function ‘main’:
./samples/SAFE/__tmp_5789795c.c:162:18: error: expected ‘;’ at end of input
  162 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_5789795c.c:162:13: error: expected declaration or statement at end of input
  162 |             break
      |             ^~~~~
./samples/SAFE/__tmp_5789795c.c:162:13: error: expected declaration or statement at end of input
